--- a/Test.ipynb
+++ b/Test.ipynb
@@ -500,14 +500,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load data with augmentation settings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# mu = (0.4914, 0.4822, 0.4465)\n",
+    "# std=(0.2023, 0.1994, 0.2010)\n",
+    "#random_crop = 32 # crop size\n",
+    "horizontal_flip = 0.5 # random flip probability\n",
+    "translation = (0.1,0.1) # horizontal, vertical\n",
+    "batch_size = 64\n",
+    "\n",
+    "train_transform = get_transforms(standardNormalize=True,horizontal_flip = horizontal_flip, translation = translation) # Parameters are defaulted to no change. change parameters as wanted\n",
+    "test_transform = get_transforms(standardNormalize=True)\n",
+    "\n",
+    "# Load CIFAR-10 dataset\n",
+    "trainset = torchvision.datasets.CIFAR10(root='./data', train=True, download=True, transform=train_transform)\n",
+    "train_loader = torch.utils.data.DataLoader(trainset, batch_size=64, shuffle=True, pin_memory=True, num_workers=0)\n",
+    "\n",
+    "testset = torchvision.datasets.CIFAR10(root='./data', train=False, download=True, transform=test_transform)\n",
+    "test_loader = torch.utils.data.DataLoader(testset, batch_size=64, shuffle=False, pin_memory=True, num_workers=0)\n",
+    "\n",
+    "classes = ('plane', 'car', 'bird', 'cat',\n",
+    "           'deer', 'dog', 'frog', 'horse', 'ship', 'truck')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = Cifar10Model(dropout_rate=0, batch_norm=False)\n",
     "Loss = nn.CrossEntropyLoss()\n",
-    "optimizer = create_optimizer(model, lr=0.001, momentum=0.9, weight_decay=0.0005)\n",
+    "optimizer = create_optimizer(model, lr=0.001, momentum=0.9, weight_decay=0.0000)\n",
     "n_epochs = 10"
    ]
   },
